# llm-rag-chroma-demo

./: .env  .env.default  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  CONTRIBUTING.md  LICENSE  Makefile  README.md  app_streamlit.py  clean-env.sh  ingest_documents.py  pyproject.toml  pytest.ini  query_engine.py  rag_demo.py  rag_web_interface.py  requirements.txt  setup.cfg  vector_store.py
.github/workflows/: ci.yml
data/hr_policy/: hr_policy_engineering.txt  hr_policy_sales.txt
data/utils/: __init__.py  generate_hr_policies_pdf.py  pdf_generator.py
docs/: EXAMPLES.md  EXAMPLE_ENGINEERING_HR.md  EXAMPLE_GENERIC_HR.md  EXAMPLE_HR_GUIDE_POLICY.md  UKRI_EXAMPLES.md
examples/: dependency_injection_example.py
rag_system/: __init__.py  cli.py  rag_system.py
rag_system/core/: __init__.py  config.py  logging.py
rag_system/ingestion/: __init__.py  document_loader.py  text_processor.py  vector_store.py
rag_system/ui/: __init__.py  streamlit_app.py
reports/: pytest_report.html
src/: main.py
src/chroma/: vector_store.py
src/chroma/utils/: __init__.py
src/chromadb/: vector_store.py
src/chromadb/utils/: __init__.py
src/ingestion/: README.md
src/ingestion/builders/: __init__.py  ingestion_menu_builder.py
src/ingestion/commands/: __init__.py  process_files_command.py
src/ingestion/core/: enums.py  interfaces.py
src/ingestion/core/interfaces/: __init__.py  document_loader.py  document_processor.py  embedding_generator.py  ingestion_orchestrator.py  menu_strategy.py  text_chunker.py  text_extractor.py  user_interface.py  vector_store.py  workflow.py  workflow_builder.py
src/ingestion/factories/: ingestion_menu_orchestrator_factory.py
src/ingestion/orchestrators/: ingestion_menu_orchestrator.py
src/ingestion/services/: document_loader.py  ingestion_orchestrator.py  text_chunker.py  text_extractor.py  text_extractor_factory.py  user_interface.py
src/ingestion/utils/: __init__.py
src/logging/: logger.py
src/logging/utils/: __init__.py
src/logutils/: __init__.py  logger.py
src/menu/: README.md  __init__.py
src/menu/commands/: __init__.py  back_command.py  exit_command.py  help_command.py
src/menu/concrete/: __init__.py  menu_command_item.py  menu_group.py
src/menu/core/: __init__.py  enums.py  menu_builder.py  menu_command.py  menu_component.py  menu_registry.py
src/menu/orchestrators/: __init__.py  menu_orchestrator.py
tests/: README.md  __init__.py  conftest.py  run_menu_tests.py  run_tests.sh  test_core_config.py  test_ingestion.py  test_menu_functionality.py  test_system.py
tests/data/: test_document.txt
tests/data/hr_policy/: hr_policy_generic.txt
tests/data/utils/: __init__.py  generate_hr_policies_pdf.py  pdf_generator.py
